--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     ]
   },
   "dependencies": {
+    "leaflet": "^1.7.1",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-leaflet": "^3.2.5",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.4.0",
+    "@types/leaflet": "^1.7.9",
     "@types/react": "^17.0.38",
     "@types/styled-components": "^5.1.22",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
