--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     ]
   },
   "dependencies": {
+    "@styled-icons/evaicons-outline": "^10.34.0",
     "leaflet": "^1.7.1",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
