--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "World Map",
-  "short_name": "World Map",
+  "name": "My Trips",
+  "short_name": "My Trips",
   "icons": [
     {
       "src": "/image/icon-192.png",
