--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
     "next-seo": "^5.3.0",
+    "next-sitemap": "^2.5.20",
     "nextjs-progressbar": "^0.0.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
